fix dead links on mobile home and modify navbar

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -30,8 +30,8 @@
     letter-spacing: 2px;
     font-size: 26px;
     color: white!important;
-    margin-top:15px;
-    margin-bottom:15px;
+    margin-top:7px;
+    margin-bottom:7px;
   }
 
   .navbar-collapse ul {
